--- a/app/views/invitations/please_sign_in.html.haml
+++ b/app/views/invitations/please_sign_in.html.haml
@@ -23,5 +23,4 @@
         .span6.offset3
           %p
             If you've already got an account,
-            %a
-              click here to sign in
+            =link_to 'click here to sign in', user_session_path
