--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -166,3 +166,33 @@
           %h3 Interested? Get in touch!
           %p If you’d like to find out more about the project, drop us a line at <a href="mailto:contact@loomio.org">contact@loomio.org</a>
           %p If you’d rather speak to someone directly, you can call Ben on +6421 0232 5433.
+
+.container
+  .section#pricing
+    .inner-container
+      .row-fluid
+        .subhead
+          %h1 Paying for Loomio
+      .row-fluid
+        .span12
+          %p Loomio is a cooperative social enterprise, working to make everyday democracy accessible to as many people as possible. To achieve this vision we’re developing an ethical payment model to resource the software development.
+
+          %p Groups fit into one of two categories, depending on their means:
+      .row-fluid
+        .span6
+          %h2 Subscription
+          %p Formal groups, like businesses, local government organisations, incorporated societies, and other formally constituted organisations, pay a small monthly subscription based on the number of users and length of subscription.
+        .span6
+          %h2 Pay What You Can
+          %p Groups without a budget, like social movements, informal networks, and family groups are welcome to use Loomio without paying a set subscription. Group members will be invited to contribute what they can.
+      .row-fluid
+        .span12
+          %h2 Setup and Engagement Support
+          %p Members of the Loomio consulting team have deep experience in facilitation, co-creative work practices, community development and collaborative decision-making. As you’re getting your new group set up, we can work closely with you to find the best structure for your group and develop an effective strategy for engaging your members.
+          %p This service can be provided for an hourly fee or fixed price depending on your needs.
+      .row-fluid
+        .span12
+          %h2 Additional services
+          %p We also offer a wide array of additional services to ensure your success in developing new collaborative processes in your group: including training, communications design, online and in-person facilitation, and strategy development.
+          %p Get in touch if you’d like to discuss any of these services.
+
