PERFECT WORK EVERYTOME

--- a/app/views/admin/group_requests/approve_and_send_form.html.erb
+++ b/app/views/admin/group_requests/approve_and_send_form.html.erb
@@ -8,12 +8,13 @@
     <textarea name="message_body", rows=20>
 Dear <%= @group_request.name %>
 
-Your request to join loomio has been aprroved. Follow the link below to setup your group on Loomio
+I've just approved your application to join Loomio. Click the link below to set it up.
 
 {invitation_link}
 
-Thanks a bunch.
-Lots of love, your scoobie
+Let me know if you have any questions or feedback.
+
+Thank you,
 <%= current_user.name %>
     </textarea>
     <br/>
