--- a/app/views/admin/group_requests/approve_and_send_form.html.erb
+++ b/app/views/admin/group_requests/approve_and_send_form.html.erb
@@ -6,7 +6,7 @@
 
   <%= simple_form_for @group_request, url: approve_and_send_admin_group_request_path do |f| %>
     <textarea name="message_body", rows=20>
-Dear <%= @group_request.name %>
+Dear <%= @group_request.admin_name %>,
 
 I've just approved your application to join Loomio. Click the link below to set it up.
 
