--- a/app/views/group_requests/_form.html.haml
+++ b/app/views/group_requests/_form.html.haml
@@ -6,8 +6,7 @@
 
       %h2 Tell us about your group
       = f.input :name, label: "What is the name of your group/organisation?"
-      = f.input :why_do_you_want, label: "Why does your group want to use Loomio?"
-      = f.input :group_core_purpose, label: "What is the core purpose of your group?"
+      = f.input :description, label: "Tell us about your group and why you'd like to use Loomio."
       = f.input :sectors, label: false, as: :check_boxes,
                 collection: ['Informal network',
                              'Social movement',
