--- a/app/views/group_requests/_form.html.haml
+++ b/app/views/group_requests/_form.html.haml
@@ -38,7 +38,7 @@
                  :validate => { :presence => true },
                  label: "What type of group is this?"
       = f.input :other_sector, label: false
-      = f.input :expected_size, label: "How many people to you expect to be in your loomio group?"
+      = f.input :expected_size, label: "How many people to you expect to be in your Loomio group?"
 
       %h2 Tell us about yourself
       %p You’ll be the coordinator for your group while you’re getting set up.
@@ -54,8 +54,8 @@
         It’s really useful for us to know what types of groups want to use Loomio, and what kind of payment model works best for them. Which of the two options below would best fit your group?
 
       = f.input :cannot_contribute,
-        collection: {"<strong>Subscription:</strong><br/> Established groups and organisations will pay a regular monthly subscription".html_safe => false,
-                     "<strong>Pay what you can:</strong><br/> If your group doesn’t have a formal budget, your group members will be invited to make a voluntary contribution.".html_safe => true},
+        collection: ["<strong>Subscription:</strong><br/> Established groups and organisations will pay a regular monthly subscription".html_safe,
+                     "<strong>Pay what you can:</strong><br/> If your group doesn’t have a formal budget, your group members will be invited to make a voluntary contribution.".html_safe],
                 as: :radio_buttons, label: ""
 
       %p
