--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -1,5 +1,5 @@
 .row
-  .span6#group-form
+  .span6
     %h1= form_title
     = simple_form_for group, :validate => true do |f|
       = f.input :name, input_html: {class: "rm-margin-bottom"}
