Convert .scss files to .sass

--- a/app/assets/stylesheets/group_requests.css.sass
+++ b/app/assets/stylesheets/group_requests.css.sass
@@ -2,8 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com
 
-body.group_requests {
-  &.new, &.create {
-    textarea { height: 80px; }
-  }
-}
+body.group_requests
+  &.new, &.create
+    textarea
+      height: 80px
