--- a/app/assets/stylesheets/invitations.css.sass
+++ b/app/assets/stylesheets/invitations.css.sass
@@ -2,7 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-body.group_setup.setup, body.invitations.new {
-  #invitees { height: 50px; }
-  #group_setup_message_body { height: 185px; }
-}
+body.group_setup.setup, body.invitations.new
+  #invitees
+    height: 50px
+  #group_setup_message_body
+    height: 185px
