--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -46,10 +46,10 @@ h4, h5, h6 { line-height: 18px; }
 .revision-title p { font-size: 85%; }
 
 // structural elements (containers etc.)
-.page-container { margin-top: 30px; }
+.page-container { margin-top: 20px; }
 
-// #start-new-discussion { margin: 0 0 20px 2px; }
-.main-content { margin-top: 20px; }
+.main-content {
+  margin-top: 15px; }
 
 
 /**** Structural elements ****/
@@ -58,7 +58,6 @@ li.selector-item {
   background-color: $unhighlighted;
   color: $dark-grey;
   font-weight: normal;
-  border-bottom: 1px solid $light-grey;
 }
 
 li.selector-item a.selector-link {
@@ -72,7 +71,7 @@ li.selector-item a.selector-link:hover {
 }
 
 .alert {
-  margin: 10px 0;
+  margin: 20px 0 -10px 0;
 }
 
 // color coded urgency labels
