--- a/app/views/groups/_members.html.haml
+++ b/app/views/groups/_members.html.haml
@@ -25,4 +25,4 @@
       - group.users.each do |user|
         = render 'membership', user: user, group: group
     -if can?(:add_members, group) && group.is_top_level?
-      = link_to members_pending_count(group), group_invitations_path(group), class: 'bottom-panel-link'
+      = link_to members_pending_count(group), group_invitations_path(group), class: 'bottom-panel-link', id: 'pending-count'
