--- a/app/views/groups/_setup_next_steps.html.haml
+++ b/app/views/groups/_setup_next_steps.html.haml
@@ -3,6 +3,6 @@
     = t :setup_steps_title
     = link_to("×", hide_next_steps_group_path(@group), method: :post, remote: true, class: "close hide-next-steps")
   %ol
-    %li#example_discussion= t(:setup_step_1)
-    %li#first_discussion= t(:setup_step_2)
-    %li#invite_people= t(:setup_step_3)
+    %li#example-discussion= t(:setup_step_1)
+    %li#first-discussion= t(:setup_step_2)
+    %li#invite-people= t(:setup_step_3)
