new header style

--- a/app/assets/stylesheets/icons.css.scss
+++ b/app/assets/stylesheets/icons.css.scss
@@ -58,6 +58,17 @@
   position: relative;
 }
 
+.large-icon.group-icon {
+  background: url('large-icons/group-grey.png') no-repeat 0 -2px;
+  width: 24px;
+  height: 24px;
+}
+
+.large-icon.bell-icon {
+  background: url('large-icons/bell-grey.png') no-repeat 0 1px;
+  width: 16px;
+  height: 24px;
+}
 
 
 
