--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -1,7 +1,3 @@
-// twitter-bootstrap
-$baseFontSize: 14px;
-$baseLineHeight: 18px;
-
 // application
 $font-tinywiny: 0.7em;
 $font-tiny: 0.8em;
@@ -24,7 +20,7 @@ $header-link-color: #4786CC;
 
 $loomio-orange: #ffa600;
 $header-color: #F2F2F2;
-$navbar-text-color: #BFBFBF;
+$navbar-text-color: #333;
 
 $error-color: firebrick;
 
@@ -32,12 +28,13 @@ $comment-color: white;
 $current-proposal: white;
 
 $main-background: #F7F7F7;
+$pattern-background: url('backgrounds/squairy_light.png');
 
 $container: white;
 $sub-selector-panel: #efefef;
 $selector-panel: #ebebeb;
-$selector: #e0eaf1;
-$highlighted: #f6f6f6;
+$selector: #F7F3E2;
+$highlighted: #F7F3E2;
 $unhighlighted: white;
 // $group-activity: #ABBEE6;
 $group-activity: #75A0CF;
