--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -1,4 +1,5 @@
 @import "settings";
+@import "mixins";
 
 .dropdown-menu {
   a {
@@ -20,8 +21,10 @@
   margin: auto;
   background-color: $container;
   min-height: 100%;
-  padding: 40px 20px 20px 20px;
+  padding: 54px 20px 20px 20px;
 }
+
+
 
 .logged-in-navigation {
   .nav-item-icon {
@@ -33,7 +36,7 @@
   }
 
   li.nav-item {
-    margin-top: 2px;
+    margin-top: 10px;
     .caret {
       border-top: 4px solid $light-grey;
       opacity: 1;
@@ -42,15 +45,16 @@
   li.nav-item a.nav-logo-link {
     padding: 0px 8px 1px 0px;
     display: block;
+    margin-bottom: 9px;
   }
   li.nav-item a.nav-link {
-    color: $light-grey;
+    color: $mid-grey;
     display: block;
     padding: 8px 8px;
     line-height: 18px;
   }
   li.nav-item a.nav-link:hover{
-    color: white;
+    color: $mid-grey;
     text-decoration: none;
     .caret { border-top: 4px solid white; }
     span.nav-item-icon{ opacity: 1; }
@@ -61,6 +65,7 @@
 
   li.nav-item#logo-home {
     float: left;
+    margin-top: 8px;
   }
 
   li.nav-item#notifications-container {
@@ -73,12 +78,21 @@
 
   li.nav-item.dropdown#user {
     float: right;
+    background: #fff;
+    @include border-radius(3px);
+    margin-top: 10px;
+    border: 1px solid #ddd;
+    .avatar-canvas { border: none; }
+
+    a.nav-link { padding: 3px;}
+
+    .caret { margin-right: 4px; margin-top: 12px; }
     #header-user-image {
-      border: 1px solid #555;
       position: relative;
-      bottom: 5px;
       margin-right: 5px;
+      @include border-radius(3px);
     }
+    #user-name-dropdown { padding: 3px; display: inline-block; }
   }
   li.nav-item.dropdown#groups {
     float: left;
@@ -102,6 +116,9 @@
     overflow-y: auto;
     max-height: 390px;
     min-width: 350px;
+    h3 { 
+      padding-left: 20px; border-bottom: 1px solid $light-grey;
+    }
   }
   li#groups ul.dropdown-menu {
     background-color: #eee;
@@ -110,7 +127,7 @@
   li.group-item {
     background-color: white;
   }
-  li.group-item.sub-group a {
+  li.group-item.sub-group a,  {
     padding-left: 20px;
     font-size: $font-small;
   }
@@ -130,5 +147,8 @@
     padding-right: 14px;
 
     .help-question { padding-right: 10px; }
+  }
+  #notification-dropdown-items {
+    background: #fff;
   }
 }
