--- a/app/assets/stylesheets/icons.css.scss
+++ b/app/assets/stylesheets/icons.css.scss
@@ -54,8 +54,7 @@
 }
 
 .header-bar-icon{
-  bottom: 2px;
-  position: relative;
+  margin: 0;
 }
 
 .large-icon.group-icon {
@@ -69,6 +68,3 @@
   width: 16px;
   height: 24px;
 }
-
-
-
