--- a/app/views/application/_user_dropdown.html.haml
+++ b/app/views/application/_user_dropdown.html.haml
@@ -1,5 +1,5 @@
 %li.nav-item.dropdown#user
-  %a.nav-link{href: "#", class: 'dropdown-toggle', 'data-toggle' => 'dropdown'}
+  %a.nav-link.btn{href: "#", class: 'dropdown-toggle', 'data-toggle' => 'dropdown'}
     = render 'base/avatar', user: current_user, size: "small", kind: nil, id: 'header-user-image'
     %span#user-name-dropdown
       = current_user.name
