--- a/app/assets/stylesheets/groups.css.scss
+++ b/app/assets/stylesheets/groups.css.scss
@@ -127,7 +127,7 @@ body.groups {
 
 // group title (on almost all pages)
 .group-title {
-  margin: 0;
+  margin: 0 0 20px;
   h1 {
     font-size: 24px;
     margin-bottom: 0;
