--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -11,7 +11,8 @@ html { height: 100%; }
 body {
   background-color: $main-background;
   height: 100%;
-  color: $dark-grey;
+  color: $darker-grey;
+  font-family: 'Arimo', sans-serif;
 }
 
 hr {
@@ -21,7 +22,8 @@ hr {
 // Override bootstrap 2.3 headers with 2.0.3 styles
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
-  font-family: inherit;
+  
+  font-family: 'Archivo Narrow', sans-serif;
   font-weight: bold;
   color: inherit;
   text-rendering: optimizelegibility;
@@ -29,6 +31,7 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
   font-size: 30px;
   line-height: 36px;
+  margin-bottom: 20px;
 }
 h2 {
   font-size: 24px;
@@ -46,7 +49,7 @@ h4, h5, h6 { line-height: 18px; }
 .revision-title p { font-size: 85%; }
 
 // structural elements (containers etc.)
-.page-container { margin-top: 20px; }
+.page-container { margin-top: 30px; }
 
 .main-content {
   margin-top: 15px; }
@@ -115,13 +118,22 @@ a.btn-icon:hover { color: $dark-grey; }
 .pages.how_it_works,
 .pages.about,
 .pages.about_us, .woc.index, .we_the_people.index, .group_requests.start_new_group {
-  color: black;
 
   .frontpage-nav {
     text-transform:lowercase;
     margin-top: 15px;
     text-align: center;
     font-size: 130%;
+    font-family: 'Archivo Narrow', sans-serif;
+    font-size: 26px;
+    text-shadow: 1px 1px 1px #fff;
+    color: $loomio-orange;
+    a { color: $loomio-orange; }
+  }
+
+  .home-header {
+    text-align: center;
+    text-shadow: 1px 1px 1px #fff;
   }
 
   p, label{
@@ -149,7 +161,6 @@ a.btn-icon:hover { color: $dark-grey; }
       margin-bottom: 5px;
     }
     h2{
-      letter-spacing:  -1px;
       font-size: 30px;
       line-height: 36px;
       margin-bottom: 5px;
@@ -175,7 +186,6 @@ a.btn-icon:hover { color: $dark-grey; }
   .subhead h1, .head h1{
     font-size: 50px;
     margin-bottom: 9px;
-    letter-spacing:  -1px;
   }
   .head h1{
     margin: 72px 0 9px 0;
