--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -6,7 +6,7 @@
           %ul.nav-bar-list.clearfix
             %li.nav-item#logo-home
               %a.nav-logo-link{:href => "/"}
-                = image_tag("top-bar-loomio.png", :alt => "Loomio")
+                = image_tag("logos/loomio-navbar.png", :alt => "Loomio")
               = render 'application/groups_dropdown'
               = render 'notifications_dropdown'
               = render 'user_dropdown'
