add feature components

--- a/app/views/error_rainchecks/error_page.html
+++ b/app/views/error_rainchecks/error_page.html
@@ -56,8 +56,8 @@
       <label>
         <input placeholder="Please enter your email address" type="email" tabindex="2">
       </label>
-      <input class="btn btn-info" id="email-address-submit" name="commit" type="submit" value="Submit">
-        <a href="/">
+      <input class="btn btn-info" id="email-address-submit" name="commit" input type="submit" value="Submit">
+        <a href="/error_rainchecks">
           <div>
             <p></p>
             Return to your home page
