--- a/app/assets/stylesheets/error_rainchecks.css.scss
+++ b/app/assets/stylesheets/error_rainchecks.css.scss
@@ -1,3 +1,19 @@
-// Place all the styles related to the ErrorRainchecks controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+h1 {
+  line-height: 1.5em;
+}
+#error-head{
+  background-color: #292929;
+}
+.content {
+  margin-top: 20px;
+  margin-bottom: 30px;
+  padding: 20px;
+}
+#header {
+    height: 150px;
+}
+#error-container{
+  width: 940px;
+  margin:0px auto;
+}
+
