--- a/app/views/error_rainchecks/error_page.html.haml
+++ b/app/views/error_rainchecks/error_page.html.haml
@@ -1,9 +1,12 @@
 #error-container
+  -if current_user
+    %img(src="/assets/loomio-orange.png")
   .content
     = simple_form_for @error_raincheck, :validation => true do |f|
       %h1 We're sorry, but something went wrong.
+      %p
       %p We've been notified about this issue and we'll take a look at it shortly.
       %p If you continue to experience issues, you can enter your email address below and we can notify you when the error is resolved.
-      = f.input_field :email, placeholder: 'Please enter your email adress'
-      
+      = f.input :email, label: false, placeholder: 'Please enter your email adress'
       = f.submit :class => "btn btn-medium btn-info", value: "Submit",id: "error-raincheck-submit"
+    %p= link_to 'Return to home page', root_path
