--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -9,7 +9,7 @@ $font-large: 1.3em;
 $font-xlarge: 1.5em;
 $font-xxlarge: 1.7em;
 
-// colors
+// greys
 $lighter-grey: #E8E8E8;
 $light-grey: #BBB;
 $mid-grey: #777;
@@ -20,7 +20,13 @@ $link-blue: #39A0C4;
 // $header-link-color: #5E91C9;
 $header-link-color: #4786CC;
 
+// colours (mainly used in buttons)
+$green: #A5CE3B;
+$blue: #7EC7E2;
+$orange: #E26B35;
 $loomio-orange: #ffa600;
+$yellow: #DDD944;
+$red: #CC2A2B;
 $header-color: #F2F2F2;
 $navbar-text-color: #333;
 
