--- a/app/views/pages/styleguide.html.haml
+++ b/app/views/pages/styleguide.html.haml
@@ -28,8 +28,14 @@
 = link_to 'tiny button', '', :class=>'loom-btn tiny'
 
 %h3 Button Colours
+
+%h4 Main buttons
 = link_to 'button', '', :class=>'loom-btn green'
-= link_to 'button', '', :class=>'loom-btn green'
-= link_to 'button', '', :class=>'loom-btn green'
-= link_to 'button', '', :class=>'loom-btn green'
-= link_to 'button', '', :class=>'loom-btn green'
+= link_to 'button', '', :class=>'loom-btn blue'
+
+%h4 Special buttons (alerts, warnings etc)
+= link_to 'button', '', :class=>'loom-btn orange'
+= link_to 'button', '', :class=>'loom-btn loomio-orange'
+= link_to 'button', '', :class=>'loom-btn red'
+= link_to 'button', '', :class=>'loom-btn grey'
+= link_to 'button', '', :class=>'loom-btn white'
