--- a/app/assets/stylesheets/buttons.css.scss
+++ b/app/assets/stylesheets/buttons.css.scss
@@ -11,24 +11,23 @@
   text-shadow: none;
   }
 .loom-btn.green {
-  @include loom-btn($loomio-orange, #fff);
+  @include loom-btn($green, #fff);
   }
 .loom-btn.blue {
+  @include loom-btn($blue, #fff);
+  }
+.loom-btn.loomio-orange {
   @include loom-btn($loomio-orange, #fff);
   }
 .loom-btn.orange {
-  @include loom-btn($loomio-orange, #fff);
+  @include loom-btn($orange, #fff);
   }
-.loom-btn.gray {
-  @include loom-btn($loomio-orange, #fff);
+.loom-btn.grey {
+  @include loom-btn(#c5c5c5, #555);
+  text-shadow: 1px 1px 1px #fff;
   }
 .loom-btn.red {
-  @include loom-btn($loomio-orange, #fff);
-  }
-.loom-btn.lightGray {
-  @include loom-btn(#f2f2f2, #666);
-  text-shadow: none;
-  border: 2px solid #eee;
+  @include loom-btn($red, #fff);
   }
 .loom-btn.white {
   @include loom-btn(#fff, #777);
