--- a/app/views/layouts/pages.html.haml
+++ b/app/views/layouts/pages.html.haml
@@ -6,6 +6,7 @@
     <!--[if lt IE 9]><script type="text/javascript" src="/assets/lib/excanvas.js"></script><![endif]-->
     = stylesheet_link_tag  "frontpage"
     = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Arimo:400,700'
+    = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Fjalla+One&subset=latin,latin-ext'
 
     = csrf_meta_tags
     = render 'social_metadata', description: @meta_description, title: @meta_title
