--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -6,5 +6,5 @@
     .activity-item-comment-actor
       =link_to comment.user_name, user_path(comment.user), class: "user-name"
     .activity-item-header~ add_mention_links(render_rich_text(comment.body.to_s.force_encoding("UTF-8"), comment.uses_markdown?)).html_safe
-    .comment-time-and-likes
-      =render 'comments/comment_likes', comment: comment
+    .comment-footer
+      =render 'comments/comment_footer', comment: comment
