--- a/app/views/comments/comment_likes.js.erb
+++ b/app/views/comments/comment_likes.js.erb
@@ -1,2 +1,2 @@
 comment_id = <%= @comment.id.to_s %>
-$("#comment-container-" + comment_id).find(".comment-time-and-likes").html("<%= escape_javascript render 'comments/comment_likes', comment: @comment %>");
+$("#comment-container-" + comment_id).find(".comment-footer").html("<%= escape_javascript render 'comments/comment_footer', comment: @comment %>");
