--- a/app/views/inbox/_discussion_line_item.html.haml
+++ b/app/views/inbox/_discussion_line_item.html.haml
@@ -10,7 +10,7 @@
       = item.title
 
     .span1.time{title: 'Last comment at'}
-      = time_formatted_relative_to_age(item.last_comment_at)
+      = time_formatted_relative_to_age(item.last_comment_at, false)
     -#.span1
       -#.unfollow-btn
         -#= link_to 'h', unfollow_inbox_path({class: item.class.to_s, id: item.id}), remote: true, method: :post, id: 'unfollow-btn'
