--- a/app/views/motions/_motion.html.haml
+++ b/app/views/motions/_motion.html.haml
@@ -14,7 +14,7 @@
         - else
           No close date
       .proposed-by
-        = t(:proposed_when_by_who, when: time_ago_in_words(motion.created_at), who: motion.author_name)
+        = t(:proposed_by, when: time_formatted_relative_to_age(motion.created_at), who: motion.author_name)
     .span2.motion-admin-buttons
       = render '/motions/admin_buttons', motion: motion unless motion.closed?
   .row
