--- a/app/views/motions/_motion_preview.html.haml
+++ b/app/views/motions/_motion_preview.html.haml
@@ -16,7 +16,7 @@
               - if motion.voting?
                 = t(:proposal_closing_when, when: time_ago_in_words(motion.close_at))
               - else
-                = t(:proposal_closed_when, when: time_ago_in_words(motion.close_at))
+                = t(:proposal_closed, when: time_formatted_relative_to_age(motion.close_at))
             - else
               = "no close date"
             =" · " unless this_group
