--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -5,15 +5,9 @@
         .span6
           %h2.buffer Creating a world where it’s easy for anyone to participate in decisions that affect them.
 
-          %p
-            Loomio is a user-friendly app for building shared understanding, making clear decisions and turning talk into action.
-            =link_to 'Find out more', about_path
+          %p Loomio is a user-friendly tool that makes it easy for groups to make good decisions quickly.
 
-          %p
-            We’re still in development &ndash; if you want to start using Loomio early,
-            %a{href: request_new_group_path} click here to apply.
-          -#%p
-            -#You can check out some of the public Loomio groups
-            -#%a{href: public_groups_path, id: 'public-groups'} here
+          #button-container
+            = link_to "Start a group", selection_group_requests_path, class: 'btn btn-success btn-large', id: 'start-group-btn'
         .span6
           <iframe class="no-bottom-margin" src="https://player.vimeo.com/video/51331688?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;color=ff9933" width="426" height="264" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
