--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -15,12 +15,14 @@
     %ul.selector-list.bordered
       #all-discussions-loading
         %li.selector-item.loading= t(:loading)
-      -##discussions-with-motions
-        -#- @discussions.with_current_motions_user_has_not_voted_on.each do |discussion|
-          -#%li.selector-item= render '/discussions/discussion_preview', discussion: discussion, this_group: @group
-        -#- @discussions.with_current_motions_user_has_voted_on.each do |discussion|
-          -#%li.selector-item= render '/discussions/discussion_preview', discussion: discussion, this_group: @group
-        -#.discussion-with-motion-divider.hidden
+      #discussions-with-motions
+        - @discussions.with_open_motions.each do |discussion|
+          %li.selector-item= render '/discussions/discussion_preview', discussion: discussion, this_group: @group
+        / - @discussions.with_current_motions_user_has_not_voted_on.each do |discussion|
+        /   %li.selector-item= render '/discussions/discussion_preview', discussion: discussion, this_group: @group
+        / - @discussions.with_current_motions_user_has_voted_on.each do |discussion|
+        /   %li.selector-item= render '/discussions/discussion_preview', discussion: discussion, this_group: @group
+        .discussion-with-motion-divider.hidden
       #group-discussions.hidden
         %div{ class: "group_#{@group.id}" }
 
